--- a/Blog Preview Card/QR Code/styles.css
+++ b/Blog Preview Card/QR Code/styles.css
@@ -10,10 +10,21 @@
     margin: 0;
 }
 
+@font-face {
+    font-family: 'Figtree', sans-serif;
+    src: url('./assets/fonts/static/Figtree-Medium.ttf') format('ttf');
+}
+
+@font-face {
+    font-family: 'Figtree', sans-serif;
+    src: url('./assets/fonts/static/Figtree-ExtraBold.ttf') format('ttf');
+    font-weight: bold;
+}
+
 body {
     background-color: var(--Yellow);
     height: 100vh;
-    font-family: "Outfit", sans-serif;
+    font-family: 'Figtree', sans-serif;
 
     display: flex;
     flex-direction: column;
@@ -23,9 +34,9 @@ body {
 
 #blog-preview-container {
     background-color: var(--White);
-    width: 18em;
+    width: 21em;
     border-radius: 1em;
-    padding: 1em;
+    padding: 1.3em;
     gap: 0.8em;
 
     display: flex;
@@ -51,26 +62,34 @@ body {
 
 .blog-preview-tag {
     background-color: var(--Yellow);
-    padding: 3px 7px;
+    padding: 5px 10px;
     border-radius: 4px;
     font-size: 0.8em;
     font-weight: bold;
 }
 
+.blog-date {
+    font-size: 0.9em;
+}
+
 .container-text h1 {
     font-size: 22px;
+    font-weight: bold;
     margin-bottom: 0.5em;
     color: var(--Gray-950);
 }
 
 .container-text p {
-    font-size: 16px;
+    font-size: 15px;
+    line-height: 1.5em;
     color: var(--Gray-500);
 }
 
 .blog-preview-author {
     display: flex;
     align-items: center;
+    margin: 0.5em 0;
+    font-size: 0.9em;
 }
 
 .blog-preview-author img {
